# data-x

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data_x/: main.py
data_x/config/: camelcase.py  datasource.py  datax.py  model.py  pipeline.py
data_x/data/: data.py  loader.py
data_x/model/: model.py  nlp_st.py
data_x/pipeline/: pipeline.py
example/: config_01.yml
tests/: test_data_x.py
